# ScreenShot

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wuwind/screenshot/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  m_player.c  m_player0.c  m_player_v1.c  native-lib.cpp  queue0.c
app/src/main/java/com/libwuwind/player/: VideoUtils.java
app/src/main/java/com/wuwind/androidshow/: MainActivity.java
app/src/main/java/com/wuwind/androidshow/media/: H264Helper.java  MediaCodecBase.java  VideoMediaCodec.java  h264data.java
app/src/main/java/com/wuwind/androidshow/rtsp/: AbstractPacketizer.java  AudioQuality.java  AudioStream.java  H264Packetizer.java  MediaStream.java  RtpSocket.java  RtspServer.java  ScreenInputStream.java  ScreenStream.java  SenderReport.java  Session.java  SessionBuilder.java  Stream.java  UriParser.java  VideoQuality.java  VideoStream.java
app/src/main/java/com/wuwind/androidshow/screen/: Constant.java  ScreenRecord.java
app/src/main/java/com/wuwind/conn/: FrpcManager.java  TcpClientThread.java  TcpDataServerThread.java  TcpSendThread.java  TcpServerThread.java
app/src/main/java/com/wuwind/screenshot/: LauncherActivity.java  MainActivity.java  ServerActivity.java
app/src/main/java/com/wuwind/screenshot/services/: ScreenRecordService.java
app/src/main/jni/include/: queue0.h
app/src/main/res/layout/: activity_launcher.xml  activity_main.xml  activity_main2.xml  activity_server.xml
app/src/test/java/com/wuwind/screenshot/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
